--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         </div>
                         <div class="contact__widget__item__text">
                             <h4>Address</h4>
-                            <p>Los Angeles Gournadi, 1230 Bariasl</p>
+                            <p>Kottayam Kerala,India</p>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="contact__widget__item__text">
                             <h4>Hotline</h4>
-                            <p>1-677-124-44227 • 1-688-356-66889</p>
+                            <p> + 91 9207299989 /p>
                         </div>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="contact__widget__item__text">
                             <h4>Email</h4>
-                            <p>Support@gmail.com</p>
+                            <p>jomunchacko@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -187,8 +187,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>Formed in 2006 by Matt Hobbs and Cael Jones, Videoprah is an award-winning, full-service
-                                production company specializing.</p>
+                            <p>Jomon Chacko is a professional video editor and motion graphics expert .</p>
                             <a href="#" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
@@ -217,7 +216,7 @@
                     <div class="col-lg-4 col-md-12">
                         <div class="footer__option__item">
                             <h5>Newsletter</h5>
-                            <p>Videoprah is an award-winning, full-service production company specializing.</p>
+                            <p>.He is freelancing companies from 2017 onwards and made reputed place in the industry</p>
                             <form action="#">
                                 <input type="text" placeholder="Email">
                                 <button type="submit"><i class="fa fa-send"></i></button>
@@ -230,13 +229,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        <p class="footer__copyright__text">Copyright &copy;
-                            <script>
-                                document.write(new Date().getFullYear());
-                            </script>
-                            All rights reserved | This template is made with <i class="fa fa-heart-o"
-                                aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                        </p>
+                       
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
