--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
-                                <span>For website and video editing</span>
-                                <h2>Videographer’s Portfolio</h2>
+                                <span> Video Editing</span>
+                                <h2>Editor Portfolio</h2>
                                 <a href="#" class="primary-btn">See more about us</a>
                             </div>
                         </div>
@@ -107,8 +107,8 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
-                                <span>For website and video editing</span>
-                                <h2>Videographer’s Portfolio</h2>
+                                <span>video editing</span>
+                                <h2> Editor Portfolio</h2>
                                 <a href="#" class="primary-btn">See more about us</a>
                             </div>
                         </div>
@@ -129,8 +129,8 @@
                             <span>Our services</span>
                             <h2>What We do?</h2>
                         </div>
-                        <p>If you hire a videographer of our team you will get a video professional to make a custom
-                            video for your business and, once the project is over.</p>
+                        <p>If you hire me you will get a video professional to make a custom
+                            video graphics for your business.</p>
                         <a href="#" class="primary-btn">View all services</a>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                                     <img src="img/icons/si-1.png" alt="">
                                 </div>
                                 <h4>Motion graphics</h4>
-                                <p>Whether you’re halfway through the editing process, or you haven’t even started, our
+                                <p>Whether you’re halfway through the editing process, or you haven’t even started,my
                                     post production services can put the finishing touches.</p>
                             </div>
                         </div>
@@ -151,9 +151,8 @@
                                 <div class="services__item__icon">
                                     <img src="img/icons/si-2.png" alt="">
                                 </div>
-                                <h4>Scriptwriting and editing</h4>
-                                <p>Whether you’re halfway through the editing process, or you haven’t even started, our
-                                    post production services can put the finishing touches.</p>
+                                <h4> Editing</h4>
+                                <p>Editing and making a final output of your desrired video as per script.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -162,7 +161,7 @@
                                     <img src="img/icons/si-3.png" alt="">
                                 </div>
                                 <h4>Video distribution</h4>
-                                <p>Whether you’re halfway through the editing process, or you haven’t even started, our
+                                <p>Whether you’re halfway through the editing process, or you haven’t even started, my
                                     post production services can put the finishing touches.</p>
                             </div>
                         </div>
@@ -171,8 +170,8 @@
                                 <div class="services__item__icon">
                                     <img src="img/icons/si-4.png" alt="">
                                 </div>
-                                <h4>Video hosting</h4>
-                                <p>Whether you’re halfway through the editing process, or you haven’t even started, our
+                                <h4>Color Grading</h4>
+                                <p>Whether you’re halfway through the editing process, or you haven’t even started, my
                                     post production services can put the finishing touches.</p>
                             </div>
                         </div>
